--- a/components/navigation-links2.html
+++ b/components/navigation-links2.html
@@ -1,12 +1,10 @@
 <div>
   <link href="./navigation-links2.css" rel="stylesheet" />
   <nav class="navigation-links2-nav">
-    <a href="about.html" class="navigation-links2-navlink">
-      <span>About</span>
-    </a>
-    <span class="navigation-links2-text"><span>Features</span></span>
-    <span class="navigation-links2-text1"><span>Pricing</span></span>
-    <span class="navigation-links2-text2"><span>Team</span></span>
-    <span class="navigation-links2-text3"><span>Blog</span></span>
+    <span class="navigation-links2-text"><span>About</span></span>
+    <span class="navigation-links2-text1"><span>Features</span></span>
+    <span class="navigation-links2-text2"><span>Pricing</span></span>
+    <span class="navigation-links2-text3"><span>Team</span></span>
+    <span class="navigation-links2-text4"><span>Blog</span></span>
   </nav>
 </div>
